[project]
name = "databahn"
version = "0.1.0"
description = "cyber sec data retriever"
authors = [
    {name = "nitish",email = "nikenitish@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12.11"
dependencies = [
    "aiohttp (>=3.12.13,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai (>=1.93.0,<2.0.0)",
    "mcp (>=1.10.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
